add controller and a homepage

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,7 +17,7 @@
         {% endblock %}
     </head>
     <body>
-        {% include('layout/navbar.html.twig') %}
+        {% include('layout/header.html.twig') %}
         {% block body %}{% endblock %}
     </body>
 </html>
