--- a/templates/layout/header.html.twig
+++ b/templates/layout/header.html.twig
@@ -4,5 +4,10 @@
             <img src="{{ asset('img/logo_salmon.svg') }}" alt="" width="30" height="24" class="d-inline-block align-text-top">
             Symforion
         </a>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="{{ url('manage_marks') }}">Gérer les notes</a>
+            </li>
+        </ul>
     </div>
 </nav>
