--- a/templates/display_marks/index.html.twig
+++ b/templates/display_marks/index.html.twig
@@ -4,47 +4,140 @@
 
 {% block body %}
 <style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-    table {
-        font-family: arial, sans-serif;
-        border-collapse: collapse;
-        width: 100%;
+    .example-wrapper {
+        margin: 0 auto;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        width: 95%;
+        font: 18px/1.5 sans-serif;
+        color: black;
     }
 
-    td, th {
-        border: 1px solid #dddddd;
-        text-align: left;
-        padding: 8px;
+    body{
+        background: linear-gradient(106.23deg, rgba(255, 147, 128, 0) -4.17%, #FE6E54 82.69%), #FFB1A3;
+    }
+    .tableContainer{
+        width: 90%;
+        margin: 20px auto 0;
+        background: rgba(255, 255, 255, 0.31);
     }
 
-    tr:nth-child(even) {
-        background-color: #dddddd;
+    table
+    {
+        border-collapse:separate;
+        border-spacing: 0 1em;
+        mix-blend-mode: normal;
+    }
+    th, td
+    {
+        padding: 0.7em 1em;
+    }
+
+    /** HEADER **/
+    thead tr th{
+        background: #f8f8f8;
+        color: #d23f29;
+    }
+    thead tr th:first-child
+    {
+        border-radius: 0.6em 0 0 0.6em;
+    }
+    thead th:nth-child(2)
+    {
+        border-radius: 0 0 0 0;
+    }
+    thead th:nth-child(3)
+    {
+        border-radius: 0 0 0 0;
+    }
+    thead th:nth-child(4)
+    {
+        border-radius: 0 0 0 0;
+    }
+    thead th:nth-child(5)
+    {
+        border-radius: 0 0.6em 0.6em 0;
+    }
+
+    /** BODY **/
+    tbody tr td{
+        background: #f8f8f8;
+        color: #d23f29;
+    }
+    tbody tr td:first-child
+    {
+        border-radius: 0.6em 0 0 0.6em;
+
+    }
+    tbody td:nth-child(2)
+    {
+        border-radius: 0 0 0 0;
+    }
+    tbody td:nth-child(3)
+    {
+        border-radius: 0 0 0 0;
+    }
+    tbody td:nth-child(4)
+    {
+        border-radius: 0 0 0 0;
+    }
+    tbody td:nth-child(5)
+    {
+        border-radius: 0 0.6em 0.6em 0;
+    }
+
+    /** HOVER EFFECT **/
+    tbody tr:hover td{
+        background: #eae0e0;
+        color: #fc8777;
+    }
+    tbody tr:hover td:first-child
+    {
+        border-radius: 0.6em 0 0 0.6em;
+    }
+    tbody tr:hover td:nth-child(2)
+    {
+        border-radius: 0 0 0 0;
+    }
+    tbody tr:hover td:nth-child(3)
+    {
+        border-radius: 0 0 0 0;
+    }
+    tbody tr:hover td:nth-child(4)
+    {
+        border-radius: 0 0 0 0;
+    }
+    tbody tr:hover td:nth-child(5)
+    {
+        border-radius: 0 0.6em 0.6em 0;
     }
 </style>
+<div class="tableContainer">
+    <div class="example-wrapper">
 
-<div class="example-wrapper">
-    
-    <table>
-        <tr>
-            <th>Nom</th>
-            <th>note</th>
-            <th>coef</th>
-            <th>type</th>
-            <th>description</th>
-            <th>matière</th>
-        </tr>
-        {% for mark in marks %}
-            <tr>
-                <td>{{ mark.student.firstname }}</td>
-                <td>{{ mark.mark }}</td>
-                <td>{{ mark.coef }}</td>
-                <td>{{ mark.type }}</td>
-                <td>{{ mark.description }}</td>
-                <td>{{ mark.subject.name }}</td>
-            </tr>
-        {% endfor %}
-    </table>
+        <table id="markTable"  style="width:100%">
+            <thead>
+                <tr>
+                    <th>note</th>
+                    <th>coef</th>
+                    <th>type</th>
+                    <th>description</th>
+                    <th>matière</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for mark in marks %}
+                <tr>
+                    <td>{{ mark.mark }}</td>
+                    <td>{{ mark.coef }}</td>
+                    <td>{{ mark.type }}</td>
+                    <td>{{ mark.description }}</td>
+                    <td>{{ mark.subject.name }}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
 
+    </div>
 </div>
 {% endblock %}
