add loginform and Auth logic

--- a/templates/layout/header.html.twig
+++ b/templates/layout/header.html.twig
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <img src="{{ asset(img/logo_white) }}" alt="" width="30" height="24" class="d-inline-block align-text-top">
+            <img src="{{ asset("img/logo_salmon.svg") }}" alt="" width="30" height="24" class="d-inline-block align-text-top">
             Symforion
         </a>
     </div>
