--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -53,7 +53,7 @@
                                 </div>
                                 <div class="col mt-2">
                                     <div class="form-group form-check">
-                                        <input type="checkbox" class="form-check-input" id="rememberMe" name="remember_me">
+                                        <input type="checkbox" class="form-check-input" id="rememberMe" name="_remember_me">
                                         <label class="form-check-label" for="rememberMe">Se souvenir de moi</label>
                                     </div>
                                 </div>
