--- a/templates/manage_marks/index.html.twig
+++ b/templates/manage_marks/index.html.twig
@@ -4,60 +4,96 @@
 
 {% block body %}
 <style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+    .card {
+        margin: auto auto; /* Added */
+        float: none; /* Added */
+    }
+
+    .form-new-mark {
+        width: 100%;
+        height: available;
+    }
 </style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Bonjour Mr. Husson</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/loick/LE4/Symfony/Symforion/src/Controller/ManageMarksController.php'|file_link(0) }}">src/Controller/ManageMarksController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/loick/LE4/Symfony/Symforion/templates/manage_marks/index.html.twig'|file_link(0) }}">templates/manage_marks/index.html.twig</a></code></li>
-    </ul>
+    <div class="form-new-mark">
 
-    <select id="select-subject" class="form-select" >
-        {% for subject in subjects %}
-            <option value="{{ subject.id }}">{{ subject.name }}</option>
-        {% endfor %}
-    </select>
+        <div class="card" style="width: 40rem;">
+            <div class="card-body">
+                <h3 class="card-title">Ajouter une note: </h3>
+                <hr/>
 
-    <select id="select-promo" class="form-select">
-        {% for promo in promos %}
-            <option value="{{ promo.id }}">{{ promo.name }}</option>
-        {% endfor %}
-    </select>
+                <div class="input-group mb-3">
+                    <span class="input-group-text">Matières: </span>
+                    <select id="select-subject" class="form-select" >
+                        {% for subject in subjects %}
+                            <option value="{{ subject.id }}">{{ subject.name }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
 
-    <select id="select-student" class="form-select">
-    </select>
+                <div class="row mb-3">
+                    <div class="col-4">
+                        <div class="input-group">
+                            <span class="input-group-text">Promo: </span>
+                            <select id="select-promo" class="form-select">
+                                {% for promo in promos %}
+                                    <option value="{{ promo.id }}">{{ promo.name }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-8">
+                        <div class="input-group">
+                            <span class="input-group-text">Élève: </span>
+                            <select id="select-student" class="form-select">
+                            </select>
+                        </div>
+                    </div>
+                </div>
 
-    <select id="select-type" class="form-select">
-        <option value="CB">CB</option>
-        <option value="CC">CC</option>
-    </select>
-
-    <div class="input-group">
-        <span class="input-group-text">Description</span>
-        <textarea class="form-control" aria-label="Description"></textarea>
-    </div>
-
-    <div class="input-group">
-        <span class="input-group-text">Note</span>
-        <input type="text" id="salary" name="salary" class="form-control" aria-label="Note"
-               oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');
+                <div class="row mb-3">
+                    <div class="col">
+                        <div class="input-group">
+                            <span class="input-group-text">Type: </span>
+                            <select id="select-type" class="form-select">
+                                <option value="CB">CB</option>
+                                <option value="CC">CC</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="input-group">
+                            <span class="input-group-text">Note (/20):</span>
+                            <input type="text" id="salary" name="salary" class="form-control" aria-label="Note"
+                                   oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');
                if(this.value>20) this.value=20; if(this.value < 0) this.value=0;" />
-        <span class="input-group-text">/20</span>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="input-group">
+                            <span class="input-group-text">Coef.</span>
+                            <input type="text" id="salary" name="salary" class="form-control" aria-label="Note"
+                                   oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');
+                       if(this.value < 0) this.value=1;"/>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="input-group mb-3">
+                    <span class="input-group-text">Description</span>
+                    <textarea class="form-control" aria-label="Description"></textarea>
+                </div>
+
+                <button type="button" class="btn btn-primary mb-3">Ajouter la note</button>
+
+            </div>
+
+        </div>
+
     </div>
 
-    <div class="input-group">
-        <span class="input-group-text">Coef.</span>
-        <input type="text" id="salary" name="salary" class="form-control" aria-label="Note"
-               oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"/>
-    </div>
-
-    <button type="button" class="btn btn-primary">Ajouter la note</button>
-</div>
 
 <script type="text/javascript" src="{{ asset('js/manageMarks.js') }}"></script>
 {% endblock %}
