add new clear btn

--- a/templates/manage_marks/index.html.twig
+++ b/templates/manage_marks/index.html.twig
@@ -86,7 +86,15 @@
                     <textarea class="form-control" aria-label="Description"></textarea>
                 </div>
 
-                <button type="button" class="btn btn-primary mb-3">Ajouter la note</button>
+                <div class="row mb-3">
+                    <div class="col-4 offset-1">
+                        <button type="button" id='btn-clear' class="btn btn-secondary">Effacer les champs</button>
+                    </div>
+
+                    <div class="col-4 offset-3">
+                        <button type="button" id='btn-new-mark' class="btn btn-primary">Ajouter la note</button>
+                    </div>
+                </div>
 
             </div>
 
