--- a/templates/display_marks/index.html.twig
+++ b/templates/display_marks/index.html.twig
@@ -1,7 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Hello DisplayMarksController!{% endblock %}
-
+{% block stylesheets %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.css">
+{% endblock %}
 {% block body %}
 <style>
     .example-wrapper {
@@ -25,12 +29,14 @@
     table
     {
         border-collapse:separate;
-        border-spacing: 0 1em;
-        mix-blend-mode: normal;
+        border-spacing: 0 1em !important;
     }
     th, td
     {
         padding: 0.7em 1em;
+    }
+    input, select{
+        background-color: #f8f8f8 !important;
     }
 
     /** HEADER **/
@@ -140,4 +146,9 @@
 
     </div>
 </div>
+    <script>
+        $(document).ready( function () {
+            $('#markTable').DataTable();
+        } );
+    </script>
 {% endblock %}
