--- a/templates/display_marks/index.html.twig
+++ b/templates/display_marks/index.html.twig
@@ -5,119 +5,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.css">
+    <link rel="stylesheet" type="text/css" href="{{ asset("css/markDisplay.css") }}">
 {% endblock %}
 {% block body %}
-<style>
-    .example-wrapper {
-        margin: 0 auto;
-        padding-top: 20px;
-        padding-bottom: 20px;
-        width: 95%;
-        font: 18px/1.5 sans-serif;
-        color: black;
-    }
-
-    body{
-        background: linear-gradient(106.23deg, rgba(255, 147, 128, 0) -4.17%, #FE6E54 82.69%), #FFB1A3;
-    }
-    .tableContainer{
-        width: 90%;
-        margin: 20px auto 0;
-        background: rgba(255, 255, 255, 0.31);
-    }
-
-    table
-    {
-        border-collapse:separate;
-        border-spacing: 0 1em !important;
-    }
-    th, td
-    {
-        padding: 0.7em 1em;
-    }
-    input, select{
-        background-color: #f8f8f8 !important;
-    }
-
-    /** HEADER **/
-    thead tr th{
-        background: #f8f8f8;
-        color: #d23f29;
-    }
-    thead tr th:first-child
-    {
-        border-radius: 0.6em 0 0 0.6em;
-    }
-    thead th:nth-child(2)
-    {
-        border-radius: 0 0 0 0;
-    }
-    thead th:nth-child(3)
-    {
-        border-radius: 0 0 0 0;
-    }
-    thead th:nth-child(4)
-    {
-        border-radius: 0 0 0 0;
-    }
-    thead th:nth-child(5)
-    {
-        border-radius: 0 0.6em 0.6em 0;
-    }
-
-    /** BODY **/
-    tbody tr td{
-        background: #f8f8f8;
-        color: #d23f29;
-    }
-    tbody tr td:first-child
-    {
-        border-radius: 0.6em 0 0 0.6em;
-
-    }
-    tbody td:nth-child(2)
-    {
-        border-radius: 0 0 0 0;
-    }
-    tbody td:nth-child(3)
-    {
-        border-radius: 0 0 0 0;
-    }
-    tbody td:nth-child(4)
-    {
-        border-radius: 0 0 0 0;
-    }
-    tbody td:nth-child(5)
-    {
-        border-radius: 0 0.6em 0.6em 0;
-    }
-
-    /** HOVER EFFECT **/
-    tbody tr:hover td{
-        background: #eae0e0;
-        color: #fc8777;
-    }
-    tbody tr:hover td:first-child
-    {
-        border-radius: 0.6em 0 0 0.6em;
-    }
-    tbody tr:hover td:nth-child(2)
-    {
-        border-radius: 0 0 0 0;
-    }
-    tbody tr:hover td:nth-child(3)
-    {
-        border-radius: 0 0 0 0;
-    }
-    tbody tr:hover td:nth-child(4)
-    {
-        border-radius: 0 0 0 0;
-    }
-    tbody tr:hover td:nth-child(5)
-    {
-        border-radius: 0 0.6em 0.6em 0;
-    }
-</style>
 <div class="tableContainer">
     <div class="example-wrapper">
 
@@ -148,7 +38,9 @@
 </div>
     <script>
         $(document).ready( function () {
-            $('#markTable').DataTable();
+            $('#markTable').DataTable({
+                "dom" : 't'
+            });
         } );
     </script>
 {% endblock %}
