--- a/templates/layout/header.html.twig
+++ b/templates/layout/header.html.twig
@@ -6,5 +6,10 @@
 
             Symforion
         </a>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="{{ url('display_marks') }}">Afficher mes notes</a>
+            </li>
+        </ul>
     </div>
 </nav>
