--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Symforion - Connexion !{% endblock %}
 
 {% block stylesheets %}
-    <link href="{{ asset('css/loginform.css') }}" rel="stylesheet">
+    <link href="{{ asset('css/styles.css') }}" rel="stylesheet">
 {% endblock %}
 
 {% block body %}
