--- a/templates/layout/header.html.twig
+++ b/templates/layout/header.html.twig
@@ -4,17 +4,17 @@
             <img src="{{ asset('img/logo_salmon.svg') }}" alt="" width="30" height="24" class="d-inline-block align-text-top">
             Symforion
         </a>
-        
-        {% is_granted("ROLE_TEACHER") %}
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="{{ url('manage_marks') }}">Gérer les notes</a>
-                  <a class="nav-link" aria-current="page" href="{{ url('display_marks') }}">Afficher mes notes</a>
-              </li>
-          </ul>
-        {% endif %}
-        
         {% if app.user %}
+            {% if is_granted("ROLE_TEACHER") %}
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                      <a class="nav-link" aria-current="page" href="{{ url('manage_marks') }}">Gérer les notes</a>
+                      <a class="nav-link" aria-current="page" href="{{ url('display_marks') }}">Afficher mes notes</a>
+                  </li>
+              </ul>
+            {% endif %}
+        
+
             <span class="navbar-text">
                 {{ app.user.firstname }} {{ app.user.lastname }}
             </span>
