add admin fixtures + delete promo + stuff

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -47,28 +47,28 @@
 
             {% elseif is_granted('ROLE_ADMIN') %}
 
-                <div class="col-md-2">
+                <div class="col-md-3">
                     <div class="card shadow">
                         <i class="card-img-top bi bi-ul-list" alt="..."></i>
                         <div class="card-body ">
-                            <h4 class="card-title">Mes stats</h4>
+                            <h4 class="card-title">Gestion des utilisateurs</h4>
                             <p class="card-text">
-                                Accedez à un ensemble de statistique et suivez l'evolution de vos notes au cours de l'année
+                                Accedez à la gestion des utilisateurs, créer ou modifier un Eleve ou un Professeur
                             </p>
-                            <a href="" class="btn btn-outline-salmon rounded-pill">Voir les statistiques</a>
+                            <a href="/manage/users" class="btn btn-outline-salmon rounded-pill">Gerer les utilisateurs</a>
 
                         </div>
                     </div>
                 </div>
 
-                <div class="col-md-2">
+                <div class="col-md-3">
                     <div class="card shadow">
                         <div class="card-body ">
-                            <h4 class="card-title">Mes stats</h4>
+                            <h4 class="card-title">Gestion des promos</h4>
                             <p class="card-text">
-                                Accedez à un ensemble de statistique et suivez l'evolution de vos notes au cours de l'année
+                                Accedez à la gestion des promos. Vous pourrez creer ou supprimer une promotion.
                             </p>
-                            <a href="" class="btn btn-outline-salmon rounded-pill">Voir les statistiques</a>
+                            <a href="/manage/promo" class="btn btn-outline-salmon rounded-pill">Gerer les promos</a>
                         </div>
                     </div>
                 </div>
