--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,7 @@
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
         <script src="{{ asset('js/jQuery/jQuery_3-6-0.js') }}"></script>
+        <script src="{{ asset('js/utils.js') }}"></script>
 
         {% block javascripts %}
             {#{{ encore_entry_script_tags('app') }}#}
@@ -32,6 +33,11 @@
     </head>
     <body>
         {% include('layout/header.html.twig') %}
+
+        <div class="container mb-5 mt-5">
+            <div id="alert-container"></div>
+        </div>
+
         {% block body %}{% endblock %}
     </body>
 </html>
