--- a/templates/display_marks/index.html.twig
+++ b/templates/display_marks/index.html.twig
@@ -2,11 +2,14 @@
 
 {% block title %}Hello DisplayMarksController!{% endblock %}
 {% block stylesheets %}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.css">
     <link rel="stylesheet" type="text/css" href="{{ asset("css/markDisplay.css") }}">
 {% endblock %}
+
+{% block javascripts %}
+    <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
+{% endblock %}
+
 {% block body %}
 <div class="tableContainer">
     <div class="example-wrapper">
