--- a/templates/manage_marks/index.html.twig
+++ b/templates/manage_marks/index.html.twig
@@ -13,10 +13,14 @@
 
     <div class="form-new-mark">
 
-        <div class="card" style="width: 40rem;">
+        <div class="card shadow" style="width: 40rem;">
             <div class="card-body">
-                <h3 class="card-title">Ajouter une note: </h3>
-                <hr/>
+                <h3 class="card-title text-center">Ajouter une note</h3>
+                <div class="row">
+                    <div class="col-8 mx-auto">
+                        <hr>
+                    </div>
+                </div>
 
                 <div class="input-group mb-3">
                     <span class="input-group-text">Matières: </span>
