--- a/templates/admin/managePromo.html.twig
+++ b/templates/admin/managePromo.html.twig
@@ -54,7 +54,7 @@
                                             <td>{{ promo.id }}</td>
                                             <td>{{ promo.name }}</td>
                                             <td>
-                                                <button type="button" class="deletePromo btn btn-danger" value="{{ promo.id }}" onclick="handleDeletePromo(event)"><i class="bi bi-trash"></i></button>
+                                                <button type="button" class="deletePromo btn btn-danger" value="{{ promo.id }}" ><i class="bi bi-trash"></i></button>
                                                 <input type="hidden" value="{{ promo.id }}">
                                             </td>
                                         </tr>
