--- a/templates/admin/managePromo.html.twig
+++ b/templates/admin/managePromo.html.twig
@@ -3,11 +3,12 @@
 {% block title %}Symforion - Gestion des promos !{% endblock %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/dataTables.bootstrap5.min.css">
 {% endblock %}
 
 {% block javascripts %}
     <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.25/js/dataTables.bootstrap5.js"></script>
     <script src="{{ asset('js/managePromo.js') }}"></script>
 {% endblock %}
 
@@ -39,7 +40,7 @@
                         <div class="row mt-4">
                             <h5>Liste des Promos</h5>
                             <div class="col-12 mt-3">
-                                <table id="promoTable">
+                                <table id="promoTable" class="table table-hover">
                                     <thead>
                                     <tr>
                                         <th>id</th>
