create student + almost teacher

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -55,7 +55,7 @@
                             <p class="card-text">
                                 Accedez à la gestion des utilisateurs, créer ou modifier un Eleve ou un Professeur
                             </p>
-                            <a href="/manage/users" class="btn btn-outline-salmon rounded-pill">Gerer les utilisateurs</a>
+                            <a href="/manage/user" class="btn btn-outline-salmon rounded-pill">Gerer les utilisateurs</a>
 
                         </div>
                     </div>
