add and delete subject

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -73,6 +73,18 @@
                     </div>
                 </div>
 
+                <div class="col-md-3">
+                    <div class="card shadow">
+                        <div class="card-body ">
+                            <h4 class="card-title">Gestion des matières</h4>
+                            <p class="card-text">
+                                Accedez à la gestion des matières. Vous pourrez créer ou supprimer une matière.
+                            </p>
+                            <a href="/manage/subject" class="btn btn-outline-salmon rounded-pill">Gèrer les matières</a>
+                        </div>
+                    </div>
+                </div>
+
             {% endif %}
 
         </div>
